On the road to 2024.09:
- added custom autorun script support
---
Highlights 2024.08:
- added clean-blockdevice.sh script
Environment:
- updated and unified usage information in all scripts
- added bash completion for restore-usbstick.sh and clean-blockdevice.sh
---
Highlights 2024.07:
- kernel 6.10.x
- OpenSSH 9.8
- use 3cpio with zstd for concatenated cpio archive initramfs
  decompression => up to 25% faster bootup
- launch bandwhich on VC5 and bottom on VC6
- updated MOTD
Environment:
- optimized init.sh and login.sh
- changed eza default date colour to white
- changed dialog to new colour scheme
- added bandwhich, bottom, choose, dog, dysk, miniserve, netscanner,
  ouch, trippy and zoxide
- fixed smb filesystem
- removed not needed broadcom firmware and modules on x86_64
- removed hfs, hfsplus, isofs, nfsv2, nfsv3 and udf filesystems
- removed bootctl, makepkg, pivot_root and switch_root
cpio:
- create concatenated cpio archive initramfs files => up to 25% faster
  Part 1: all directories
  Part 2: all already compressed files
  Part 3: zstd compressed rootfs
network:
- restart iwd on ESSID rescan
pacsetup:
- fixed fallback to http mirrors on aarch64
testsuite:
- renamed archboot-testsuite.sh to testsuite
- added blockdevices, filesystems, stats and Wi-Fi
- log to /dev/tty11 | VC11
server-release:
- use local files instead of resync from source server'
- switched db compression to zst
- make db files reproducible
server-updatee
- added automatic update scripts
setup:
- abort on pacman package installation error
- fixed autoconfiguration of mirror
- replaced cut usage with choose
---
Highlights 2024.06:
- systemd 256.x support
- force OpenSSH login through ttyd
- Added bat dust eza fd fzf procs ripgrep rustscan sd
Early Userspace:
- always load i8042 and atkbd module
Environment:
- removed bridge-utils
- added archboot-testsuite.sh
- cleaned up firmware files
- added archboot-fw-check.sh 
- removed marvell prestera firmware
cpio:
- replaced find with fd calls