@@ -17,7 +17,7 @@
 <h1>Archboot Home | <a href="https://archboot.com/gallery.html">Gallery</a> | <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=Z7GXKW4MKHK7C"><img src="donate.png" alt="Donate"></a></h1>
 <h2>2024 Fundraise: 0% <progress max="100" value="48">0%</progress> 100%</h2>
 <p><strong>&copy; 2006 - 2024 | <a href=mailto:tpowa@archlinux.org>Tobias Powalowski</a></strong> | Arch Linux Developer <strong><a href="https://archlinux.org/people/developers/#tpowa">tpowa</a></strong><br>
-<strong>Last update: 01.09.2024 09:05</strong></p>
+<strong>Last update: 03.09.2024 11:05</strong></p>
 <nav id="TOC" role="doc-toc">
 <ul>
 <li><a href="#introduction" id="toc-introduction"><strong><span class="toc-section-number">1.</span> Introduction</strong></a></li>
@@ -126,14 +126,14 @@
 </thead>
 <tbody>
 <tr class="odd">
-<td><strong>United States - NC</strong></td>
+<td><strong>United States - MA</strong></td>
 <td><a href="https://release.archboot.com"><strong>archboot.com</a></td>
 <td><a href="https://release.archboot.com/aarch64/latest"><strong>aarch64</a> | <a href="https://release.archboot.com/riscv64/latest"><strong>riscv64</strong></a> | <a href="https://release.archboot.com/x86_64/latest"><strong>x86_64</strong></a></td>
 </tr>
 <tr class="even">
 <td><strong>Europe - France</strong></td>
-<td><a href="https://release.archboot.de"><strong>archboot.de</a></td>
-<td><a href="https://release.archboot.de/aarch64/latest"><strong>aarch64</a> | <a href="https://release.archboot.de/riscv64/latest"><strong>riscv64</strong></a> | <a href="https://release.archboot.de/x86_64/latest"><strong>x86_64</strong></a></td>
+<td><a href="https://release.archboot.eu"><strong>archboot.eu</a></td>
+<td><a href="https://release.archboot.eu/aarch64/latest"><strong>aarch64</a> | <a href="https://release.archboot.eu/riscv64/latest"><strong>riscv64</strong></a> | <a href="https://release.archboot.eu/x86_64/latest"><strong>x86_64</strong></a></td>
 </tr>
 <tr class="odd">
 <td><strong>Asia - Indonesia</strong></td>
@@ -1013,7 +1013,7 @@ The calculated size to boot the image follows the formula:<br>
 <code># United States</code><br>
 <code>Server = https://pkg.archboot.com</code><br>
 <code># Europe</code><br>
-<code>Server = https://pkg.archboot.de</code><br>
+<code>Server = https://pkg.archboot.eu</code><br>
 <code># Asia</code><br>
 <code>Server = https://pkg.archboot.net</code><br>
 </td>
