@@ -1,4 +1,5 @@
 On the road to 2024.09:
+- switch Europe domain from archboot.de to archboot.eu
 - added custom autorun script support
 ---
 Highlights 2024.08:
